--- a/video-transcoder/container/Dockerfile
+++ b/video-transcoder/container/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20.12.2-alpine
+FROM node:20.12.2-alpine as base
 
 RUN apk update && apk upgrade && \
     apk add --no-cache bash ffmpeg nano
@@ -7,13 +7,10 @@ WORKDIR /app
 
 # Copy dependency files and install (including devDependencies for build)
 COPY package*.json .
+
 RUN npm install
 
-COPY ./index.js .
+COPY index.js .
 
-# Copy the full project and build TypeScript
-COPY . .
-RUN npm run build && ls -la dist
-
-CMD ["node", "index.js"]
+CMD ["npm", "start"]
 
